# EpiGABM

./: LICENSE  README.md  pyproject.toml  requirements-minimal.txt  requirements.txt
analyses/: bootstrap_nrmse_ci.py  compare_backends.py  compare_forecasts.py  diag_constant_cluster.py  diag_seir_clipping.py  exp01_beta_predictor_sweep.py  exp02_calibration_audit.py
config/: archetypes.yaml  default.yaml
data/: README.md
data/geo/: cemetery_boundary.json  residential_buildings.json  vo_boundary.json
data/population/: households.txt  people.txt
docs/: API.md  ARCHITECTURE.md  CONFIG.md  DATA.md  EXPERIMENTS.md  STREAMLIT.md
experiments/: diagnose_detector.py  exp10_temperature_sweep.py  exp11_ablation.py  exp12_switch_robustness.py  exp13_forecasting_benchmark.py  exp14_forecasting_smc.py  exp1_gabm_vs_rulebased.py  exp2_archetype_scaling.py  exp3_abm_vs_gabm_divergence.py  exp3_gpt4_vs_llama.py  exp4_prompt_sensitivity.py  exp5_llm_stochasticity.py  exp6_hybrid_gabm_seir.py  exp7_hmm_switching.py  exp8_calibration_forecast.py  exp9_cross_model.py  helpers.py  run_all.py  run_from.py
scripts/: download_geodata.py  in_distribution_lstm_test.py  probe_openrouter_model.py  run_all_llama.py  run_exp6_llama.py  smoke_test_compliance_toggle.py
src/agents/: archetypes.py  base.py  prompts.py
src/agents/backends/: cache.py  gpt4.py  llama.py  mock.py  openrouter.py
src/calibration/: abc.py  beta_prediction.py  history_matching.py  pipeline.py
src/logging/: agent_log.py
src/models/: abm.py  data_structures.py  gabm.py  hybrid.py  seir.py
src/orchestrator/: __init__.py  orchestrator.py
src/regime/: base.py  combined_detector.py  hmm_detector.py  relative_rt_detector.py  threshold.py
src/uncertainty/: bootstrap.py  sensitivity.py
src/utils/: data_loader.py
src/visualization/: agent_inspector.py  dashboard.py  epidemic_curve.py  geo_map.py  map_component.py
tests/: conftest.py  test_abm.py  test_agents.py  test_analyses.py  test_beta_prediction.py  test_combined_detector.py  test_gabm.py  test_relative_rt_detector.py  test_sensitivity.py  test_stage4.py
